# asiomq

./: CMakeLists.txt  version.cmake
cmake/: package.cmake  protobuf.cmake
example/: CMakeLists.txt
example/tmq/: CMakeLists.txt  client1.cc  conn1.h  foo.proto  mtype.proto  server1.cc  tmqexample.cc  typegen.cc
lib/: CMakeLists.txt
lib/tmq/: CMakeLists.txt  connection.h  tmq.proto  tmqproto.h
